--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="Sign_in_UnSuccessful">Sign in Unsuccessful</string>
     <string name="Signed_Out">Signed Out</string>
 
-    <string name="car_list_description">Car Item</string>
+    <string name="car_list_description">Car Post</string>
 
     <string name="web_client_id">16950542463-vsu3i34qcbq3b77raoj094la41l79svh.apps.googleusercontent.com</string>
 
